added basic site data

--- a/_layouts/base.hbs
+++ b/_layouts/base.hbs
@@ -3,11 +3,11 @@
 
   <head>
     <meta charset="utf-8">
-    <title>dev-stack | {{ page.title }}</title>
+    <title>COVIDHEROES.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Arnaud P. Crowther">
+    <meta name="designer" content="Boris K. Crowther">
     <link rel="icon" type="image/x-icon" href="">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans">
     <link rel="stylesheet" href="/assets/css/main.min.css" type="text/css"/>
   </head>
 
