--- a/_scss/site/_global.scss
+++ b/_scss/site/_global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -7,7 +9,7 @@ html {
 }
 body {
   background-color: #ffffff;
-  color: #3a3a3a;
+  color: #000;
   font-size: 14px;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: normal; 
@@ -53,7 +55,7 @@ body {
   vertical-align: middle;
 }
 .page-column {
-  max-width: 1170px;
+  max-width: 1240px;
   margin: auto;
 }
 .float-right {
