--- a/_scss/site/partials/_nav.scss
+++ b/_scss/site/partials/_nav.scss
@@ -3,20 +3,8 @@ nav {
     list-style: none;
     li {
       display: inline-block;
-      a {
-        padding: 20px;
-        color: inherit;
-        text-decoration: none;
-        opacity: 0.5;
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-    li.active {
-      a {
-        opacity: 1;
-      }
+      font-weight: 700;
+      font-size: 20px;
     }
   }
 }
