--- a/_pages/index.hbs
+++ b/_pages/index.hbs
@@ -4,6 +4,18 @@ name: home
 ---
 {{#extend "base"}}
   {{#content "content"}}
-    
+
+    {{> hero }}
+
+    {{> cause }}
+
+    {{> need }}
+
+    {{> donate }}
+
+    {{> contact }}
+
+    {{> footer }}
+
   {{/content}}
 {{/extend}}
