--- a/_partials/nav.hbs
+++ b/_partials/nav.hbs
@@ -1,5 +1,7 @@
 <nav>
-  <ul class="menu">
-    <li>{{ site.title }}</li>
-  </ul>
+  <div class="page-column">
+    <ul class="menu">
+      <li>{{ site.title }}</li>
+    </ul>
+  </div>
 </nav>
