--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -5,6 +5,12 @@
 // Partials
 @import "site/partials/page-loader";
 @import "site/partials/nav";
+@import "site/partials/hero";
+@import "site/partials/cause";
+@import "site/partials/need";
+@import "site/partials/donate";
+@import "site/partials/contact";
+@import "site/partials/footer";
 
 // Pages
 @import "site/pages/home";
