--- a/_scss/site/partials/_nav.scss
+++ b/_scss/site/partials/_nav.scss
@@ -1,6 +1,9 @@
 nav {
   ul.menu {
     list-style: none;
+    padding: 0;
+    padding: 25px 0;
+    margin: 0;
     li {
       display: inline-block;
       font-weight: 700;
