added hero scrolling buttons

--- a/_partials/cause.hbs
+++ b/_partials/cause.hbs
@@ -1,4 +1,4 @@
-<div class="section cause page-column">
+<div id="cause" class="section cause page-column">
   <h2 class="header">
     {{ site.content.sections.cause.header }}
   </h2>
