--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -1,4 +1,4 @@
-<div class="section donate page-column">
+<div id="donate" class="section donate page-column">
   <h2 class="header">
     {{ site.content.sections.donate.header }}
   </h2>
