--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -11,6 +11,7 @@
 @import "site/partials/donate";
 @import "site/partials/contact";
 @import "site/partials/footer";
+@import "site/partials/checkboxes";
 
 // Pages
 @import "site/pages/home";
