--- a/_scss/site/partials/_donate.scss
+++ b/_scss/site/partials/_donate.scss
@@ -21,10 +21,10 @@
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.15px;
-        color: RGBA(0, 0, 0, 0.6);
+        color: rgba(0, 0, 0, 0.6);
         padding: 16px;
         border-radius: 4px;
-        border: 1px solid  RGBA(0, 0, 0, 0.3);
+        border: 1px solid  rgba(0, 0, 0, 0.3);
         background-color: #fff;
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -67,7 +67,6 @@
         font-size: 22px;
         line-height: 1.09;
         letter-spacing: 0.21px;
-        color: RGBA(0, 0, 0, 0.6);
         margin-bottom: 40px;
         display: flex;
         align-items: center;
