--- a/_layouts/base.hbs
+++ b/_layouts/base.hbs
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha256-1fEPhSsRKlFKGfK3eO710tEweHh1fwokU5wFGDHO+vg=" crossorigin="anonymous"></script>
     <script>
       require(['/assets/js/require.config.min.js'], function() {
-        require(["common.min", "{{ page.name }}.min"]);
+        require(["common.min", "home.min"]);
       });
     </script>
   </body>
