modified form attributes

--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -3,7 +3,7 @@
     {{ site.content.sections.donate.header }}
   </h2>
   <p>{{ site.content.sections.donate.paragraph }}</p>
-  <form id="form" name="donate" method="POST" data-netlify="true">
+  <form id="form" name="donate">
     <div class="row">
       <input placeholder="Name" type="text" autocomplete="given-name" name="firstName">
       <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName">
