email form test

--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -3,7 +3,7 @@
     {{ site.content.sections.donate.header }}
   </h2>
   <p>{{ site.content.sections.donate.paragraph }}</p>
-  <form id="form" name="donate">
+  <form id="form">
     <div class="row">
       <input placeholder="Name" type="text" autocomplete="given-name" name="firstName">
       <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName">
@@ -94,6 +94,6 @@
         </label>
       </li>
     </ul>
-    <button type="submit" class="button primary">SUBMIT</button>
+    <button type="button" class="button primary">SUBMIT</button>
   </form>
 </div>
