--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -5,18 +5,19 @@
   <p>{{ site.content.sections.donate.paragraph }}</p>
   <form id="form">
     <div class="row">
-      <input placeholder="Name" type="text" autocomplete="given-name" name="firstName">
-      <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName">
-      <input placeholder="Phone Number" type="text" autocomplete="tel" name="phone">
+      <input placeholder="First Name" type="text" autocomplete="given-name" name="firstName" required>
+      <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName" required>
+      <input placeholder="Phone Number" type="tel" autocomplete="tel" pattern="^[0-9]{3,45}$" name="phone" required>
     </div>
     <div class="row">
-      <input placeholder="Email" type="email" autocomplete="email" name="email">
+      <input placeholder="Email" type="email" autocomplete="email" name="email" required>
       <input placeholder="Street Address" type="text" autocomplete="street-address" name="street">
     </div>
     <div class="row">
       <input placeholder="City" type="text" autocomplete="address-level2" name="city">
       <span class="select">
         <select autocomplete="address-level1" name="state">
+          <option value="N/A">Please select</option>
           <option value="AL">Alabama</option>
           <option value="AK">Alaska</option>
           <option value="AZ">Arizona</option>
@@ -94,6 +95,9 @@
         </label>
       </li>
     </ul>
-    <button type="button" class="button primary">SUBMIT</button>
+    <button type="submit" class="button primary">SUBMIT</button>
   </form>
+  <div class="form-error">
+    An error occured. Please refresh the page and try again.
+  </div>
 </div>
