--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -12,6 +12,7 @@
 @import "site/partials/contact";
 @import "site/partials/footer";
 @import "site/partials/checkboxes";
+@import "site/partials/components";
 
 // Pages
 @import "site/pages/home";
