--- a/_scss/site/partials/_hero.scss
+++ b/_scss/site/partials/_hero.scss
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-position: top;
   margin-bottom: 60px;
+  color: #fff;
   .content-container {
     height: calc(100vh - 75px);
     display: flex;
