--- a/_scss/site/partials/_nav.scss
+++ b/_scss/site/partials/_nav.scss
@@ -4,6 +4,7 @@ nav {
     padding: 0;
     padding: 25px 0;
     margin: 0;
+    text-align: right;
     li {
       display: inline-block;
       font-weight: 700;
