--- a/_scss/site/partials/_contact.scss
+++ b/_scss/site/partials/_contact.scss
@@ -16,3 +16,16 @@
     }
   }
 }
+
+
+
+
+@media(max-width: $size-small) {
+  .contact {
+    ul {
+      li {
+        font-size: 16px;
+      }
+    }
+  }
+}
