--- a/_scss/site/partials/_checkboxes.scss
+++ b/_scss/site/partials/_checkboxes.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   color: rgba(0, 0, 0, 0.6);
   font-size: 22px;
+  width: 100%;
 }
 
 .primary-checkbox > input {
@@ -80,4 +81,19 @@
 .primary-checkbox > input:indeterminate + span::after {
   border-left: none;
   transform: translate(4px, 3px);
+}
+
+
+
+
+@media(max-width: $size-small) {
+  .primary-checkbox {
+    font-size: 16px;
+  }
+  .primary-checkbox > span {
+    line-height: 1.3;
+  }
+  .primary-checkbox > span::before {
+    margin: 3px 25px 3px 1px;
+  }
 }
