--- a/_scss/site/partials/_footer.scss
+++ b/_scss/site/partials/_footer.scss
@@ -19,10 +19,64 @@
         padding: 0;
         li {
           margin-bottom: 20px;
+          &:last-child {
+            margin-bottom: 0;
+          }
           font-size: 20px;
           a {
             color: rgba(255, 255, 255, 0.7);
             text-decoration: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+@media(max-width: $size-medium) {
+  .footer {
+    .page-column {
+      display: block;
+      h3 {
+        margin-bottom: 80px;
+      }
+      .link-groups h3 {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+
+@media(max-width: $size-small) {
+  .footer {
+    padding: 80px 0;
+    .page-column {
+      display: block;
+      h3 {
+        margin-bottom: 120px;
+      }
+      .link-groups {
+        display: block;
+        div {
+          margin-right: 0;
+          margin-top: 100px;
+          h3 {
+            font-size: 16px;
+            margin-bottom: 0;
+          }
+          ul {
+            margin-top: 30px;
+            li {
+              font-size: 16px;
+              margin-bottom: 24px;
+              &:last-child {
+                margin-bottom: 0;
+              }
+            }
           }
         }
       }
