--- a/_scss/site/partials/_hero.scss
+++ b/_scss/site/partials/_hero.scss
@@ -25,3 +25,48 @@
   }
 
 }
+
+
+
+
+@media(max-width: $size-small) {
+  .hero {
+    background-position: top;
+    .content-container {
+      height: auto;
+      padding-bottom: 60px;
+      h1 {
+        text-align: center;
+        max-width: 95%;
+        margin: 20px auto 0 auto;
+        line-height: 1.1;
+        position: relative;
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -30px;
+          left: 0;
+          right: 0;
+          margin: auto;
+          width: 60px;
+          height: 3px;
+          background:#fff;
+        }
+      }
+      p {
+        text-align: center;
+        max-width: 100%;
+        margin: 60px 0 105px 0;
+        font-size: 23px;
+        line-height: 1.13;
+      }
+      a {
+        margin-right: 0;
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
