--- a/_scss/site/partials/_nav.scss
+++ b/_scss/site/partials/_nav.scss
@@ -12,3 +12,17 @@ nav {
     }
   }
 }
+
+
+
+@media(max-width: $size-small) {
+  nav {
+    ul.menu {
+      text-align: center;
+      padding: 130px 0 0 0;
+      li {
+        font-size: 10px;
+      }
+    }
+  }
+}
