--- a/_scss/site/partials/_need.scss
+++ b/_scss/site/partials/_need.scss
@@ -10,3 +10,16 @@
     }
   }
 }
+
+
+
+
+@media(max-width: $size-small) {
+  .need {
+    ul.list {
+      li {
+        font-size: 16px;
+      }
+    }
+  }
+}
