meta open graph details

--- a/_layouts/base.hbs
+++ b/_layouts/base.hbs
@@ -9,13 +9,22 @@
       gtag('js', new Date());
       gtag('config', 'UA-48714212-26');
     </script>
-    <meta charset="utf-8">
     <title>COVIDHEROES.</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Arnaud P. Crowther">
     <meta name="designer" content="Boris K. Crowther">
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="/assets/css/main.min.css" type="text/css"/>
+    <meta property="og:url" content="https://covidheroes.gives"/>
+    <meta name="twitter:title" content="COVIDHEROES. Donate surplus medical equipment to fight against Coronavirus.">
+    <meta property="og:title" content="COVIDHEROES. Donate surplus medical equipment to fight against Coronavirus."/>
+    <meta property="og:site_name" content="COVIDHEROES. Donate surplus medical equipment to fight against Coronavirus."/>
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://covidheroes.gives/assets/images/opengraph-image.jpg"/>
+    <meta property="og:image:width" content="720"/>
+    <meta property="og:image:height" content="376"/>
   </head>
 
   <body>
