--- a/_layouts/base.hbs
+++ b/_layouts/base.hbs
@@ -9,12 +9,12 @@
       gtag('js', new Date());
       gtag('config', 'UA-48714212-26');
     </script>
-    <title>COVIDHEROES.</title>
+    <title>COVIDHEROES. Donate surplus medical equipment to fight against Coronavirus.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Arnaud P. Crowther">
     <meta name="designer" content="Boris K. Crowther">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <link rel="stylesheet" href="/assets/css/main.min.css" type="text/css"/>
     <meta property="og:url" content="https://covidheroes.gives"/>
     <meta name="twitter:title" content="COVIDHEROES. Donate surplus medical equipment to fight against Coronavirus.">
