updated default state select value

--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -17,7 +17,7 @@
       <input placeholder="City" type="text" autocomplete="address-level2" name="city">
       <span class="select">
         <select autocomplete="address-level1" name="state">
-          <option value="N/A">Please select</option>
+          <option value="N/A">Select state</option>
           <option value="AL">Alabama</option>
           <option value="AK">Alaska</option>
           <option value="AZ">Arizona</option>
