--- a/_partials/donate.hbs
+++ b/_partials/donate.hbs
@@ -1,103 +1,141 @@
-<div id="donate" class="section donate page-column">
-  <h2 class="header">
-    {{ site.content.sections.donate.header }}
-  </h2>
-  <p>{{ site.content.sections.donate.paragraph }}</p>
-  <form id="form">
-    <div class="row">
-      <input placeholder="First Name" type="text" autocomplete="given-name" name="firstName" required>
-      <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName" required>
-      <input placeholder="Phone Number" type="tel" autocomplete="tel" pattern="^[0-9]{3,45}$" name="phone" required>
+<div id="donate" class="section donate">
+  <div class="page-column">
+    <h2 class="header">
+      {{ site.content.sections.donate.header }}
+    </h2>
+    <p>{{ site.content.sections.donate.paragraph }}</p>
+  </div>
+
+  <div class="form-container">
+    <div class="page-column">
+      <form id="form">
+        <div class="block">
+          <h3>Are you donating medical equipment, or are you requesting some?</h3>
+          <ul class="list">
+            <li>
+              <label class="radio-container">
+                <input type="radio" name="radio">
+                <span class="radio"></span>
+                <div class="label">I have equipment to donate</div>
+              </label>
+            </li>
+            <li>
+              <label class="radio-container">
+                <input type="radio" name="radio">
+                <span class="radio"></span>
+                <div class="label">I am requesting medical equipment </div>
+              </label>
+            </li>
+          </ul>
+        </div>
+        <div class="block">
+          <h3>Are you interested in volunteering? please check the box below.</h3>
+          <ul class="list">
+            <li>
+              <label class="checkbox-container">
+                <input type="checkbox" value="true" name="volunteer">
+                <span class="checkbox"></span>
+                <div class="label">I am interested in being a volunteer. (if you don't have any PPEs or need any PPEs but still want to contribute in the logistics please check the box.)</div>
+              </label>
+            </li>
+          </ul>
+        </div>
+        <div class="block">
+          <h3>Please fill out some basic information so we can get in touch.</h3>
+          <div class="row">
+            <input placeholder="First Name" type="text" autocomplete="given-name" name="firstName" required>
+            <input placeholder="Last Name" type="text" autocomplete="family-name" name="lastName" required>
+            <input placeholder="Phone Number" type="tel" autocomplete="tel" pattern="^[0-9]{3,45}$" name="phone" required>
+          </div>
+          <div class="row">
+            <input placeholder="Email" type="email" autocomplete="email" name="email" required>
+            <input placeholder="Street Address" type="text" autocomplete="street-address" name="street">
+          </div>
+          <div class="row">
+            <input placeholder="City" type="text" autocomplete="address-level2" name="city">
+            <span class="select">
+              <select autocomplete="address-level1" name="state">
+                <option value="N/A" disabled selected>State</option>
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+                <option value="Other">Other</option>
+              </select>
+            </span>
+            <input placeholder="Zip Code" type="text" autocomplete="postal-code">
+          </div>
+        </div>
+        <div class="block">
+          <h3>Please check the boxes indicating what items you have to donate XXXX.</h3>
+          <ul class="list">
+            {{#each site.content.sections.need.list }}
+              <li>
+                <label class="checkbox-container">
+                  <input type="checkbox" value="{{ this }}" name="list">
+                  <span class="checkbox"></span>
+                  <div class="label">{{ this }}</div>
+                </label>
+              </li>
+            {{/each}}
+          </ul>
+          <div class="row">
+            <textarea rows="8" placeholder="Please let us know if you have other items to donate XXXX." name="other"></textarea>
+          </div>
+          <button type="submit" class="button primary">SUBMIT</button>
+        </div>
+      </form>
     </div>
-    <div class="row">
-      <input placeholder="Email" type="email" autocomplete="email" name="email" required>
-      <input placeholder="Street Address" type="text" autocomplete="street-address" name="street">
-    </div>
-    <div class="row">
-      <input placeholder="City" type="text" autocomplete="address-level2" name="city">
-      <span class="select">
-        <select autocomplete="address-level1" name="state">
-          <option value="N/A" disabled selected>State</option>
-          <option value="AL">Alabama</option>
-          <option value="AK">Alaska</option>
-          <option value="AZ">Arizona</option>
-          <option value="AR">Arkansas</option>
-          <option value="CA">California</option>
-          <option value="CO">Colorado</option>
-          <option value="CT">Connecticut</option>
-          <option value="DE">Delaware</option>
-          <option value="DC">District Of Columbia</option>
-          <option value="FL">Florida</option>
-          <option value="GA">Georgia</option>
-          <option value="HI">Hawaii</option>
-          <option value="ID">Idaho</option>
-          <option value="IL">Illinois</option>
-          <option value="IN">Indiana</option>
-          <option value="IA">Iowa</option>
-          <option value="KS">Kansas</option>
-          <option value="KY">Kentucky</option>
-          <option value="LA">Louisiana</option>
-          <option value="ME">Maine</option>
-          <option value="MD">Maryland</option>
-          <option value="MA">Massachusetts</option>
-          <option value="MI">Michigan</option>
-          <option value="MN">Minnesota</option>
-          <option value="MS">Mississippi</option>
-          <option value="MO">Missouri</option>
-          <option value="MT">Montana</option>
-          <option value="NE">Nebraska</option>
-          <option value="NV">Nevada</option>
-          <option value="NH">New Hampshire</option>
-          <option value="NJ">New Jersey</option>
-          <option value="NM">New Mexico</option>
-          <option value="NY">New York</option>
-          <option value="NC">North Carolina</option>
-          <option value="ND">North Dakota</option>
-          <option value="OH">Ohio</option>
-          <option value="OK">Oklahoma</option>
-          <option value="OR">Oregon</option>
-          <option value="PA">Pennsylvania</option>
-          <option value="RI">Rhode Island</option>
-          <option value="SC">South Carolina</option>
-          <option value="SD">South Dakota</option>
-          <option value="TN">Tennessee</option>
-          <option value="TX">Texas</option>
-          <option value="UT">Utah</option>
-          <option value="VT">Vermont</option>
-          <option value="VA">Virginia</option>
-          <option value="WA">Washington</option>
-          <option value="WV">West Virginia</option>
-          <option value="WI">Wisconsin</option>
-          <option value="WY">Wyoming</option>
-          <option value="Other">Other</option>
-        </select>
-      </span>
-      <input placeholder="Zip Code" type="text" autocomplete="postal-code">
-    </div>
-    <ul class="list">
-      {{#each site.content.sections.need.list }}
-        <li>
-          <label class="primary-checkbox">
-            <input type="checkbox" value="{{ this }}" name="list">
-            <span>{{ this }}</span>
-          </label>
-        </li>
-      {{/each}}
-    </ul>
-    <div class="row">
-      <textarea rows="8" placeholder="Please let us know if you have other items to donate." name="other"></textarea>
-    </div>
-    <ul class="list">
-      <li>
-        <label class="primary-checkbox">
-          <input type="checkbox" value="true" name="volunteer">
-          <span>I am interested in being a volunteer</span>
-        </label>
-      </li>
-    </ul>
-    <button type="submit" class="button primary">SUBMIT</button>
-  </form>
-  <div class="form-error">
+
+  </div>
+  <div class="page-column form-error">
     An error occured. Please refresh the page and try again.
   </div>
 </div>
