--- a/_scss/site/_global.scss
+++ b/_scss/site/_global.scss
@@ -45,6 +45,11 @@ h2 {
   margin: 0;
 }
 h3 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 500;
+}
+h4 {
   font-size: 20px;
   font-weight: bold;
   margin: 0;
