--- a/_scss/site/partials/_donate.scss
+++ b/_scss/site/partials/_donate.scss
@@ -2,88 +2,101 @@
   p {
     max-width: 1000px;
   }
-  form {
-    max-width: 860px;
-    margin-top: 60px;
-    .row {
-      display: flex;
-      margin-bottom: 46px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-      input,
-      select,
-      textarea {
-        resize: none;
-        flex-grow: 1;
-        width: 100%;
-        margin: 0 20px;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.15px;
-        color: rgba(0, 0, 0, 0.6);
-        padding: 16px;
-        border-radius: 4px;
-        border: 1px solid  rgba(0, 0, 0, 0.3);
-        background-color: #fff;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        position: relative;
-        &:first-child {
-          margin-left: 0;
-        }
+  .form-container {
+    background: #f5f5f5;
+    margin-top: 50px;
+    form {
+      max-width: 860px;
+      .block {
+        border-bottom: 1px solid #afafaf;
+        padding: 50px 0;
         &:last-child {
-          margin-right: 0;
+          border: none;
         }
-        &.error {
-          border-color: $error-red;
-          box-shadow: 0 0 2px $error-red;
+        h3 {
+          margin-bottom: 40px;
+        }
+        .row {
+          display: flex;
+          margin-bottom: 46px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+          input,
+          select,
+          textarea {
+            resize: none;
+            flex-grow: 1;
+            width: 100%;
+            margin: 0 20px;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.15px;
+            color: rgba(0, 0, 0, 0.6);
+            padding: 16px;
+            border-radius: 4px;
+            border: 1px solid  rgba(0, 0, 0, 0.3);
+            background-color: #fff;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            position: relative;
+            &:first-child {
+              margin-left: 0;
+            }
+            &:last-child {
+              margin-right: 0;
+            }
+            &.error {
+              border-color: $error-red;
+              box-shadow: 0 0 2px $error-red;
+            }
+          }
+          textarea {
+            margin-top: 40px;
+          }
+          .select {
+            position: relative;
+            margin: 0 20px;
+            flex-basis: 30%;
+            flex-shrink: 0;
+            &:after {
+              content: "";
+              position: absolute;
+              right: 24px;
+              top: 0;
+              bottom: 0;
+              margin: auto;
+              width: 0; 
+              height: 0; 
+              border-left: 5px solid transparent;
+              border-right: 5px solid transparent;
+              border-top: 5px solid #000;
+            }
+          }
+        }
+        ul.list {
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          li {
+            margin-bottom: 40px;
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
         }
       }
-      .select {
-        position: relative;
-        margin: 0 20px;
-        flex-basis: 30%;
-        flex-shrink: 0;
-        &:after {
-          content: "";
-          position: absolute;
-          right: 24px;
-          top: 0;
-          bottom: 0;
-          margin: auto;
-          width: 0; 
-          height: 0; 
-          border-left: 5px solid transparent;
-          border-right: 5px solid transparent;
-          border-top: 5px solid #000;
-        }
+      &.disabled {
+        pointer-events: none;
+        opacity: .4;
       }
-    }
-    ul.list {
-      padding: 0;
-      margin: 0 0 46px 0;
-      list-style: none;
-      li {
-        margin: 0;
-        padding: 0;
-        font-size: 22px;
-        line-height: 1.09;
-        letter-spacing: 0.21px;
-        margin-bottom: 40px;
-        display: flex;
-        align-items: center;
-        &:last-child {
-          margin-bottom: 0;
-        }
+      button {
+        margin-top: 16px;
       }
-    }
-    &.disabled {
-      pointer-events: none;
-      opacity: .4;
     }
   }
+
   .form-error {
     margin-top: 60px;
     display: none;
@@ -100,40 +113,45 @@
     p {
       max-width: 1000px;
     }
-    form {
-      max-width: 860px;
-      margin-top: 30px;
-      .row {
-        display: block;
-        margin-bottom: 0;
-        &:last-child {
-          margin-bottom: 0;
-        }
-        input,
-        select,
-        textarea {
-          margin: 0;
-          margin-bottom: 20px;
-          padding: 12px 16px;
-        }
-        .select {
-          display: block;
-          margin: 0;
-          flex-basis: unset;
-          flex-shrink: unset;
-          &:after {
-            bottom: 18px;
+    .form-container {
+      form {
+        max-width: 860px;
+        margin-top: 30px;
+        .block {
+          .row {
+            display: block;
+            margin-bottom: 0;
+            &:last-child {
+              margin-bottom: 0;
+            }
+            input,
+            select,
+            textarea {
+              margin: 0;
+              margin-bottom: 20px;
+              padding: 12px 16px;
+            }
+            .select {
+              display: block;
+              margin: 0;
+              flex-basis: unset;
+              flex-shrink: unset;
+              &:after {
+                bottom: 18px;
+              }
+            }
+          }
+          ul.list {
+            margin-top: 10px;
+            margin-bottom: 30px;
+            li {
+              margin-bottom: 30px;
+            }
           }
         }
       }
-      ul.list {
-        margin-top: 10px;
-        margin-bottom: 30px;
-        li {
-          margin-bottom: 30px;
-        }
-      }
     }
+
   }
 
 }
