--- a/_scss/site/partials/_components.scss
+++ b/_scss/site/partials/_components.scss
@@ -242,4 +242,14 @@
   .checkbox-container {
     padding-left: 41px;
   }
+  .radio-container .label,
+  .checkbox-container .label {
+    font-size: 16px;
+  }
+  .radio {
+    top: -2px;
+  }
+  .checkbox {
+    top: 1px;
+  }
 }
