--- a/_scss/site/partials/_donate.scss
+++ b/_scss/site/partials/_donate.scss
@@ -7,10 +7,14 @@
     margin-top: 50px;
     form {
       max-width: 860px;
+      #fields,
+      #items {
+        display: none;
+      }
       .block {
-        border-bottom: 1px solid #afafaf;
+        border-top: 1px solid #afafaf;
         padding: 50px 0;
-        &:last-child {
+        &:first-child {
           border: none;
         }
         h3 {
@@ -92,7 +96,9 @@
         opacity: .4;
       }
       button {
+        display: none;
         margin-top: 16px;
+        margin-bottom: 50px;
       }
     }
   }
@@ -117,7 +123,14 @@
       form {
         max-width: 860px;
         margin-top: 30px;
+        #fields {
+          padding-bottom: 10px;
+        }
         .block {
+          padding: 30px 0;
+          h3 {
+            margin-bottom: 30px;
+          }
           .row {
             display: block;
             margin-bottom: 0;
@@ -131,6 +144,10 @@
               margin-bottom: 20px;
               padding: 12px 16px;
             }
+            textarea {
+              margin-top: 30px;
+              margin-bottom: 0;
+            }
             .select {
               display: block;
               margin: 0;
@@ -142,16 +159,16 @@
             }
           }
           ul.list {
-            margin-top: 10px;
-            margin-bottom: 30px;
             li {
-              margin-bottom: 30px;
+              margin-bottom: 20px;
             }
           }
         }
+        button {
+          margin-top: 0;
+          margin-bottom: 30px;
+        }
       }
     }
-
   }
-
 }
