--- a/_scss/site/partials/_donate.scss
+++ b/_scss/site/partials/_donate.scss
@@ -26,6 +26,10 @@
           &:last-child {
             margin-bottom: 0;
           }
+          #orgName {
+            display: none;
+            margin-bottom: 0;
+          }
           input,
           select,
           textarea {
